angrily changing About Me

--- a/forApplication/index.html
+++ b/forApplication/index.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Architects Daughter' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Boogaloo' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Coming Soon' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Dekko' rel='stylesheet'>
 </head>
 <body>
     <div id="nav"></div>
