--- a/forApplication/index.html
+++ b/forApplication/index.html
@@ -10,6 +10,7 @@
 <link href='https://fonts.googleapis.com/css?family=Boogaloo' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Coming Soon' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Dekko' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Indie Flower' rel='stylesheet'>
 </head>
 <body>
     <div id="nav"></div>
